--- a/Entrega III/Serialismo-matematicas-III.bib
+++ b/Entrega III/Serialismo-matematicas-III.bib
@@ -35,6 +35,18 @@
 	note = {\url{https://oeis.org/A000939/a000939.pdf}},
 }
 
+@article{actions,
+	author       = {Crans, Alissa S. and Fiore, Thomas M. and Satyendra, Ramon},
+	year         = {2009},
+	month        = {06},
+	pages        = {479-495},
+	title        = {{Musical Actions of Dihedral Groups}},
+	volume       = {116},
+	journal      = {The American Mathematical Monthly},
+	url          = {\url{https://doi.org/10.1080/00029890.2009.11920965}},
+	note = {\url{https://doi.org/10.1080/00029890.2009.11920965}},
+}
+
 
 @misc{gom-1,
 author       = {Gómez, Paco},
@@ -56,21 +68,33 @@ year         = {julio de 2019},
 note         = {Consultado en agosto de 2019}
 } 
 
+
+@misc{orb-est,
+author       = {Gowers, Timothy},
+title        = {{Group actions II: the orbit-stabilizer theorem}},
+howpublished = {\url{https://gowers.wordpress.com/2011/11/09/group-actions-ii-the-orbit-stabilizer-theorem/}},
+type         = {web page},
+url          = {\url{https://gowers.wordpress.com/2011/11/09/group-actions-ii-the-orbit-stabilizer-theorem/}},
+year         = {2011},
+note         = {Consultado en octubre de 2019}
+} 
+
+
 @article{celia1,
 author       = {Rubio Madrigal, Celia},
 year         = {septiembre de 2019},
 title        = {{Serialismo y matemáticas - I}},
 journal      = {Divulgamat},
-url          = {\url{url}},
-note = {\url{url}}
+url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18209:100-septiembre-2019-serialismo-y-matematicas-i&catid=67:ma-y-matemcas&directory=67}},
+note = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18209:100-septiembre-2019-serialismo-y-matematicas-i&catid=67:ma-y-matemcas&directory=67}}
 }
 
 
 @article{celia2,
 	author       = {Rubio Madrigal, Celia},
-	year         = {septiembre de 2019},
+	year         = {octubre de 2019},
 	title        = {{Serialismo y matemáticas - II}},
 	journal      = {Divulgamat},
-	url          = {\url{url}},
-	note = {\url{url}}
+	url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18227:101-octubre-2019-serialismo-y-matematicas-ii&catid=67:ma-y-matemcas&directory=67}},
+	note = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18227:101-octubre-2019-serialismo-y-matematicas-ii&catid=67:ma-y-matemcas&directory=67}}
 }
