--- a/Entrega IV/Serialismo-matematicas.bib
+++ b/Entrega IV/Serialismo-matematicas.bib
@@ -1,76 +1,38 @@
-@book{armstrong,
-  author       = {Armstrong, Mark A.},
-  title        = {{Groups and Symmetry}},
-  isbn         = {9781475740349},
-  lccn         = {87037677},  
-  series       = {Undergraduate Texts in Mathematics},
-  url          = {https://books.google.es/books?id=f2AFCAAAQBAJ},
-  year         = {2013},
-  publisher    = {Springer New York},
-  chapter      = 8,
-  note         = {Chapter 6: ``Permutations''. Chapter 17: ``Actions, Orbits, and Stabilizers''. Chapter 18: ``Counting Orbits''. \url{https://books.google.es/books?id=f2AFCAAAQBAJ}}
-}		
-
-@article{reiner,
-	author       = {Reiner, David L.},
-	year         = {1985},
-	month        = {01},
-	pages        = {51-54},
-	title        = {{Enumeration in Music Theory}},
-	volume       = {92},
-	journal      = {The American Mathematical Monthly},
-	url          = {\url{https://eclass.uoa.gr/modules/document/file.php/MATH379/2.%20%CE%86%CF%81%CE%B8%CF%81%CE%B1%3A%20American%20Mathematical%20Monthly/Enumeration%20in%20Music%20Theory.pdf}},
-	note = {\url{https://eclass.uoa.gr/modules/document/file.php/MATH379/2.%20%CE%86%CF%81%CE%B8%CF%81%CE%B1%3A%20American%20Mathematical%20Monthly/Enumeration%20in%20Music%20Theory.pdf}},
+@book{quote1,
+	title={Schoenberg: his life, world, and work},
+	author={Stuckenschmidt, H. H.},
+	lccn={lc77376619},
+	url={https://books.google.es/books?id=ApwZAQAAIAAJ},
+	note={\url{https://books.google.es/books?id=ApwZAQAAIAAJ}},
+	year={1977},
+	publisher={Calder}
 }
 
-@article{polygons,
-	author       = {Golomb, S. W. and Welch, L. R.},
-	year         = {1960},
-	month        = {04},
-	pages        = {349-353},
-	title        = {{On the enumeration of polygons}},
-	volume       = {67},
-	journal      = {The American Mathematical Monthly},
-	url          = {\url{https://oeis.org/A000939/a000939.pdf}},
-	note = {\url{https://oeis.org/A000939/a000939.pdf}},
+@misc{scho,
+	author       = {Schoenberg, Arnold},
+	title        = {{Style and Idea}},
+	url          = {\url{http://music.ucsc.edu/sites/default/files/14.SchoenbergTwelveTone.pdf}},
+	howpublished={\url{http://music.ucsc.edu/sites/default/files/14.SchoenbergTwelveTone.pdf}},
+	year         = {1950},
+}
+
+@article{sevenpm2,
+	author = {Miller, George A.},
+	title = {{The Magical Number Seven, Plus or Minus Two: Some Limits on Our Capacity for Processing Information}},
+	year = {1956},
+	journal={Psychological Review},
+	volume={63},
+	url={\url{http://psychclassics.yorku.ca/Miller/}},
+	note={\url{http://psychclassics.yorku.ca/Miller/}}
 }
 
 
-@misc{gom-1,
-author       = {Gómez, Paco},
-title        = {\textit{Mathematics and Computation in Music 2019}: un congreso interdisciplinar},
-howpublished = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18184:98-junio-2019-mathematics-and-computation-in-music-2019-un-congreso-interdisciplinar&catid=67:ma-y-matemcas&directory=67}},
-type         = {web page},
-url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18184:98-junio-2019-mathematics-and-computation-in-music-2019-un-congreso-interdisciplinar&catid=67:ma-y-matemcas&directory=67}},
-year         = {julio de 2019},
-note         = {Consultado en agosto de 2019}
-}
-
-@misc{gom-2,
-author       = {Gómez, Paco},
-title        = {\textit{Crónica del congreso Mathematics and Computation in Music 2019}},
-howpublished = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18206:99-agosto-2019-cronica-del-congreso-mathematics-and-computation-in-music-2019&catid=67:ma-y-matemcas&directory=67}},
-type         = {web page},
-url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18206:99-agosto-2019-cronica-del-congreso-mathematics-and-computation-in-music-2019&catid=67:ma-y-matemcas&directory=67}},
-year         = {julio de 2019},
-note         = {Consultado en agosto de 2019}
-} 
-
-@article{celia1,
-author       = {Rubio Madrigal, Celia},
-year         = {septiembre de 2019},
-title        = {{Serialismo y matemáticas - I}},
-journal      = {Divulgamat},
-url          = {\url{url}},
-note = {\url{url}}
-}
-
-
-@article{celia2,
-	author       = {Rubio Madrigal, Celia},
-	year         = {septiembre de 2019},
-	title        = {{Serialismo y matemáticas - II}},
-	journal      = {Divulgamat},
-	url          = {\url{url}},
-	note = {\url{url}}
+@misc{euclides,
+	author       = {Gómez, Paco},
+	title        = {Ritmos euclídeos y ritmos equilibrados},
+	howpublished = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=17815:89-marzo-2018-ritmos-euclideos-y-ritmos-equilibrados&catid=67:ma-y-matemcas&directory=67}},
+	type         = {web page},
+	url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=17815:89-marzo-2018-ritmos-euclideos-y-ritmos-equilibrados&catid=67:ma-y-matemcas&directory=67}},
+	year         = {marzo de 2018},
+	note         = {Consultado en octubre de 2019}
 }
