--- a/Entrega IV/08.Filosofia.tex
+++ b/Entrega IV/08.Filosofia.tex
@@ -1,7 +1,7 @@
-\section{EL SERIALISMO EN LA FILOSOF√çA DEL ARTE}\label{ch:filosofia}
+\section{El serialismo en la filosofÌa del arte}\label{ch:filosofia}
 	 % TODO
-        % 08.Recorrido filos√≥fico hist√≥rico, filosof√≠a del arte (quotes), motivos m√≠os (filosof√≠a actual)
-%    \subsection{Recorrido filos√≥fico del serialismo}
+        % 08.Recorrido filosÛfico histÛrico, filosofÌa del arte (quotes), motivos mÌos (filosofÌa actual)
+%    \subsection{Recorrido filosÛfico del serialismo}
 %    Schoenberg thought 'classical' tonality (aka. common-practise) was a social construct, every law was arbitrary, and that people enjoyed that kind of music because the system had internal consistency. Therefore, he created a new system (12-tone) that in his opinion had the same logic. He believed that in 100 years lay people would be singing his tunes!!
 %    
 %    Some aspects of traditional tonality *are* arbitrary, e.g. Why are maj./min. chords consonant but 7ths and 9ths not? We could move the line and say that 7ths are consonant too but 9ths still not, etc. Also, we could use scales from 'foreign' musical traditions, like the acoustic scale, and so on.
@@ -22,52 +22,51 @@
 %    
 %    In any case, Schoenberg's 12-tone technique was not the "natural" continuation of tonality, it was just one alternative. What makes Scriabin's or Stravinski's methods less valid? However, Schoenberg, unlike the others, wrote many many books ('selling' his ideas) that became the official textbooks of many American universities (see http://www.nytimes.com/2000/07/23/arts/l-serialist-history-textbook-dogma-297585.html)... And for a time, contradicting him became a sin (e.g. %http://www.nytimes.com/2000/07/09/arts/music-midcentury-serialists-the-bullies-or-the-besieged.html?pagewanted=all&src=pm).
     
-    \subsection{La visi√≥n art√≠stica de Schoenberg}
-    En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunci√≥ a su disc√≠pulo Josef Rufer:
-    \begin{quote}\emph{He realizado un descubrimiento que asegurar√° la supremac√≠a de la m√∫sica alemana durante los pr√≥ximos cien a√±os.}\end{quote}
-    Durante la mayor parte de su vida, Schoenberg crey√≥ que el p√∫blico general acabar√≠a aceptando la m√∫sica dodecaf√≥nica del mismo modo que se hab√≠an aceptado los sistemas tonales durante siglos. No solo eso, sino que pensaba que trascurridos esos cien a√±os los ni√±os cantar√≠an canciones infantiles dodecaf√≥nicas por el mundo. El dodecafonismo ser√≠a la m√∫sica del ma√±ana.
-    
-    Para √©l, la naturalidad del sistema dodecaf√≥nico resid√≠a en que era el resultado final de un proceso hist√≥rico: desde el contrapunto y el desarrollo mot√≠vico, practicado por los grandes maestros de la tradici√≥n alemana, hasta la disoluci√≥n de la tonalidad, anticipada por la m√∫sica postwagneriana e impresionista. Era parte de un continuo, del desarrollo de la historia de la m√∫sica.
-    
+    \subsection{La visiÛn artÌstica de Schoenberg}
+    En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunciÛ a su discÌpulo Josef Rufer \cite{quote1}:
     \begin{quote}
-    	Yo creo que la composici√≥n con doce sonidos y la que muchos llaman err√≥neamente ¬´m√∫sica atonal¬ª, no es el final de un viejo per√≠odo, sino el comienzo de otro nuevo. Una vez m√°s, como hace dos siglos, hay algo a lo que se llama anticuado; y una vez m√°s, se trata de ninguna obra en particular, en , de varias obras de determinado compositor; de nuevo, no es la mayor o menor maestr√≠a de tal compositor, sino que otra vez sucede que es un estilo el condenado al ostracismo. Vuelve ve a darse a s√≠ misma la denominaci√≥n de M√∫sica Nueva e vea impulsado a evocar.
+    	\textit{He realizado un descubrimiento que asegurar· la supremacÌa de la m˙sica alemana durante los prÛximos cien aÒos.}
     \end{quote}
 
-	\begin{quote}
-		La composici√≥n con doce sonidos no tiene otra finalidad que la comprensi√≥n. A la vista de ciertos acontecimientos en la historia musical reciente, √©sto puede causar asombro, ya que las obras escritas en este estilo no han sido entendidas a pesar del nuevo medio de organizaci√≥n. Por lo que, si nos olvid√°ramos de que nuestros contempor√°neos no son los √∫ltimos jueces, sino que la historia es generalmente la que predomina, habr√≠amos de considerar condenado este m√©todo. Pero, si bien parece aumentar las dificultades para el oyente, √©sto se compensa con las penalidades del compositor. Porque no resulta f√°cil el componer de esta forma, sino diez veces m√°s dif√≠cil; solo el compositor perfectamente preparado ser√° quien componga para el oyente musical igualmente bien dispuesto.
-	\end{quote}
-    
+    Durante la mayor parte de su vida, Schoenberg creyÛ que el p˙blico general acabarÌa aceptando la m˙sica dodecafÛnica del mismo modo que se habÌan aceptado los sistemas tonales durante siglos. %No solo eso, sino que pensaba que trascurridos esos cien aÒos se cantarÌan canciones dodecafÛnicas por todo el mundo.% El dodecafonismo serÌa la m˙sica del maÒana.
+    %
+    Para Èl, la naturalidad del sistema dodecafÛnico residÌa en que era un paso m·s en el proceso musical histÛrico: desde el contrapunto y el desarrollo motÌvico, practicado por los grandes maestros de la tradiciÛn alemana, hasta la disoluciÛn de la tonalidad, anticipada por la m˙sica postwagneriana e impresionista. Era parte de un continuo, del desarrollo de la historia de la m˙sica. En palabras de Schoenberg \cite{scho}:
     \begin{quote}
-    	El m√©todo de composici√≥n con doce sonidos surgi√≥ de una necesidad.
-    	
-    	En los √∫ltimos cien a√±os, el concepto de la armon√≠a cambi√≥ enormemente mediante el desarrollo del cromatismo. La idea de que la tonalidad fundamental -o radical- predominara en la constituci√≥n de los acordes y regulara su sucesi√≥n -concepto de tonalidad- hubo de determinar primeramente el concepto de tonalidad extendida. Muy pronto result√≥ dudoso el que la t√≥nica constituyese el centro permanente al que habr√≠a de corresponder toda armon√≠a o sucesi√≥n arm√≥nica. Asimismo, result√≥ dudoso si la t√≥nica que apareciese al principio, al final, o en cualquier otro lugar, tendr√≠a realmente un sentido constructivo. La armon√≠a de Richard Wagner hubo de promover el cambio en la l√≥gica y en la facultad constructiva de la armon√≠a . Una de sus consecuencias fue el llamado empleo impresionista de armon√≠as, practicado especialmente por Debussy. Sus armon√≠as, sin ninguna significaci√≥n constructiva, eran utilizadas frecuentemente con fines coloristas para expresar estados o paisajes. Paisajes y estados que, aun siendo extra-musicales, se convertir√≠an en elementos constructivos al incorporarlos a la funci√≥n emocional. De esta manera, si no en la teor√≠a, la tonalidad fue ya destronada en la pr√°ctica. Esto solo quiz√° no hubiese causado un cambio radical en la t√©cnica de la composici√≥n. Sin embargo, fue preciso tal cambio al sum√°rsele el desarrollo que termin√≥ con lo que yo llamo la emancipaci√≥n de la disonancia.
+    	\textit{Yo creo que la composiciÛn con doce sonidos y la que muchos llaman errÛneamente ``m˙sica atonal'', no es el final de un viejo perÌodo, sino el comienzo de otro nuevo. Una vez m·s, como hace dos siglos, hay algo a lo que se llama anticuado; y una vez m·s, no se trata de ninguna obra en particular, [...] % ni de varias obras de determinado compositor; de nuevo, no es la mayor o menor maestrÌa de tal compositor, 
+    	sino que otra vez sucede que es un estilo el condenado al ostracismo. %Vuelve a darse a sÌ misma la denominaciÛn de M˙sica Nueva [...]
+    }
     \end{quote}
-    
-    \begin{quote}
-    	El o√≠do se fue familiarizando gradualmente con gran n√∫mero de disonancias, hasta que lleg√≥ a perder el miedo a su efecto ¬´perturbador¬ª. Ya no se esperaba ninguna preparaci√≥n para las disonancias de Wagner, ni resoluci√≥n para las discordancias de Strauss; no nos molestaban las armon√≠as irregulares de Debussy, ni las asperezas contrapunt√≠sticas de los √∫ltimos compositores. Este estado de cosas condujo a un empleo m√°s libre de las disonancias, comparable a la utilizaci√≥n entre los compositores cl√°sicos de los acordes de s√©ptima disminuida, que pod√≠an preceder o suceder a cualquier otra armon√≠a, consonante o disonante, como si no existiese ninguna clase de disonancia. Lo que distingue las disonancias de las consonancias no es el mayor o menor grado de belleza, sino el mayor o menor grado de comprensi√≥n.
-    \end{quote}
-        
-     
-	\subsection{El valor intr√≠nseco del dodecafonismo}
-	Tras la muerte de Schoenberg en 1951 y durante dos d√©cadas m√°s, su sistema compositivo fue venerado por los compositores j√≥venes m√°s brillantes, pero despu√©s se desvaneci√≥ de las salas de conciertos y de la memoria musical colectiva. Hoy en d√≠a la m√∫sica dodecaf√≥nica est√° muerta. Ya solo vive acad√©micamente: como un ejemplo que estudiar del √©xito de las vanguardias elitistas del siglo XX, como una antigualla en la vitrina de un museo. Pero musicalmente ya nadie la disfruta, nadie desea escucharla ni tocarla.
-	
-	¬øQu√© valor art√≠stico tiene un arte que ya no se practica? A√∫n m√°s, ¬øqu√© valor tiene un arte que no gusta, no s√≥lo a las mayor√≠as desinformadas, sino incluso a los m√∫sicos m√°s conocedores, un arte que solo gusta al propio autor y a su grupo de disc√≠pulos? El dodecafonismo emplea los recursos matem√°ticos con el fin de dotar de una sintaxis a la atonalidad, pero si estos no son identificables a trav√©s de la escucha, ¬øcu√°l es entonces su cometido? ¬øEn qu√© medida afectan las reglas dodecaf√≥nicas al discurso sonoro de una pieza? Apenas es posible distinguir auditivamente una pieza meramente atonal de una dodecaf√≥nica. \cite{basomba}
-	
-	Si cuando se ide√≥ tuvo un valor intr√≠nseco, fue por haber prescindido de algunas de las preconcepciones musicales m√°s arraigadas, como la melod√≠a, la consonancia o la tonalidad. Pero precisamente por eso el dodecafonismo es desagradable al o√≠do, porque toma la disonancia y la pone al frente de toda la composici√≥n. Para Schoenberg, la aprobaci√≥n del p√∫blico no era el objetivo de su arte, y, de hecho, el desagrado colectivo era un signo del alto nivel art√≠stico y espiritual al que se encontraba:
+
+	Tras la muerte de Schoenberg en 1951, y durante algunas dÈcadas m·s, su sistema compositivo fue venerado por los compositores jÛvenes m·s brillantes, pero pronto se desvaneciÛ de las salas de conciertos. El serialismo siempre se considerÛ una m˙sica acadÈmica, difÌcil de entender, apenas musical sino teÛrica. La complejidad de percibir esta m˙sica meramente por su estructura formal impidiÛ, y todavÌa impide, que se disfrutara m·s all· de su estudio. Schoenberg intentÛ eximirse culpando al oyente, al que no creyÛ suficientemente preparado \cite{scho}:
 	
 	\begin{quote}
-		\emph{La belleza es una necesidad de los mediocres.}\footnote{A. Schoenberg, \emph{Harmonielehre}, 1922.}
+		\textit{La composiciÛn con doce sonidos no tiene otra finalidad que la comprensiÛn.
+			A la vista de ciertos acontecimientos en la historia musical reciente, 
+			Èsto puede causar asombro, ya que las obras escritas en este estilo no han sido entendidas %a pesar del nuevo medio de organizaciÛn. %Por lo que, si nos olvid·ramos de que nuestros contempor·neos no son los ˙ltimos jueces, sino que la historia es generalmente la que predomina, habrÌamos de considerar condenado este mÈtodo. Pero, si bien parece aumentar las dificultades para el oyente, Èsto se compensa con las penalidades del compositor. Porque no resulta f·cil el componer de esta forma, sino diez veces m·s difÌcil; 
+			[...] Solo el compositor perfectamente preparado ser· quien componga para el oyente musical igualmente bien dispuesto.}
+	\end{quote}
+	
+	Al contrario de lo que Schoenberg creÌa, incluso el \textit{oyente experto}, el que describe T. W. Adorno en su ``IntroducciÛn a la sociologÌa de la m˙sica'', tiene grandes dificultades para distinguir auditivamente todos los elementos que caracterizan el serialismo. Somos capaces de retener, a lo sumo, motivos de seis o siete notas, pero no de doce \cite{sevenpm2}; mucho menos de reconocer si una serie es transformaciÛn de otra. øEn quÈ medida afectan las reglas dodecafÛnicas al discurso sonoro de una pieza?
+	
+	El dodecafonismo puede atribuirse el haber prescindido de algunas de las preconcepciones musicales m·s arraigadas, como la melodÌa, la consonancia o la tonalidad. Pero precisamente por eso es impopular, porque toma la disonancia y la pone al frente de toda la composiciÛn. Para Schoenberg, la aprobaciÛn del p˙blico no era el objetivo de su arte, y, de hecho, el desagrado colectivo era un signo del alto nivel artÌstico y espiritual al que se encontraba \cite{scho}:
+	
+%	\begin{quote}
+%		\emph{La belleza es una necesidad de los mediocres.}%\footnote{A. Schoenberg, \emph{Harmonielehre}, 1922.}
+%	\end{quote}
+	\begin{quote}
+		\emph{El valor de mercado es irrelevante para el valor intrÌnseco. Un juicio no cualificado puede como m·ximo decidir el valor de mercado - un valor que puede ser inversamente proporcional al valor intrÌnseco.}%\footnote{A. Schoenberg, \emph{An Artistic Impression} (1909) en \emph{Style and Idea}, 1985.}
 	\end{quote}
 	\begin{quote}
-		\emph{El valor de mercado es irrelevante para el valor intr√≠nseco. Un juicio no cualificado puede como m√°ximo decidir el valor de mercado - un valor que puede ser inversamente proporcional al valor intr√≠nseco.}\footnote{A. Schoenberg, \emph{An Artistic Impression} (1909) en \emph{Style and Idea}, 1985.}
+		\emph{Ning˙n artista, ning˙n poeta, ning˙n filÛsofo y ning˙n m˙sico, cuyo pensamiento se desenvuelve en la m·s alta esfera, habr· de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como ``Arte para todos''. Porque si es arte no ser· para todos, y si es para todos no ser· arte.}%\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
 	\end{quote}
-	\begin{quote}
-		\emph{Ning√∫n artista, ning√∫n poeta, ning√∫n fil√≥sofo y ning√∫n m√∫sico, cuyo pensamiento se desenvuelve en la m√°s alta esfera, habr√° de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como <<Arte para todos>>. Porque si es arte no ser√° para todos, y si es para todos no ser√° arte.}\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
-	\end{quote}
+
+%	\subsection{Serialismo de escalas no crom·ticas}
+%	Tras cien aÒos de cambios histÛricos transcendentales como el desarrollo de la tecnologÌa y la globalizaciÛn, la definiciÛn de arte es muy diferente a la que Schoenberg expresaba en su tiempo. El arte est· cada vez m·s cerca del ciudadano de a pie, y se le intenta explicar y simplificar por todos los medios el arte que no entiende.
 	
-	\subsection{Serialismo de escalas no crom√°ticas}
-	Tras cien a√±os de cambios hist√≥ricos transcendentales como el desarrollo de la tecnolog√≠a y la globalizaci√≥n, la definici√≥n de arte es muy diferente a la que Schoenberg expresaba en su tiempo. El arte est√° cada vez m√°s cerca del ciudadano de a pie, y se le intenta explicar y simplificar por todos los medios el arte que no entiende.
+	Sin embargo, el rechazo a no ser rechazado ha dejado de tener cabida en nuestro contexto artÌstico. El academicismo ya no es excluyente a la divulgaciÛn o a la b˙squeda de belleza sensorial. De las tÈcnicas serialistas se puede tomar aquello que es interesante intelectualmente e incorporarlo a otras tÈcnicas que son interesantes estÈticamente.
 	
-	Por ello, he decidido experimentar con la idea del dodecafonismo y despojarle de lo que, en mi opini√≥n, provoca el rechazo general: la disonancia. Ya que esta proviene del cromatismo, la idea es utilizar escalas que no tengan intervalos de semitono, y con ellas crear un serialismo de menos notas. Modificar√© las notas de una obra dodecaf√≥nica ya existente para que se adapte a la nueva escala utilizada, mientras que el ritmo, la duraci√≥n, el timbre y las din√°micas, que siguen siendo producto del compositor original, se dejan intactas.
+	Este es el experimento que he querido proponer: despojar al serialismo de lo que, en mi opiniÛn, provoca el rechazo general: la disonancia. Ya que esta proviene del cromatismo, el propÛsito del experimento es utilizar escalas que no tengan intervalos de semitono para crear con ellas un serialismo de menos notas. 
 	
-	El objetivo de este experimento es modificar algunas obras que ya est√°n compuestas mediante el m√©todo dodecaf√≥nico, y cambiar su serialismo de doce notas por otro pseudoserialismo de menos notas. 
+	Se modificar·n las notas de una obra dodecafÛnica ya existente para que se adapte a la nueva escala utilizada, mientras que el ritmo, la duraciÛn, el timbre y las din·micas, que siguen siendo producto del compositor original, se dejan intactas. El propÛsito final es intentar conservar la estructura matem·tica renovando, en cambio, la percepciÛn colectiva de estas m˙sicas.
+	
+	Para describir el proceso de modificaciÛn de las obras debemos definir lo que entendemos por escala y cu·les son las funciones Ûptimas entre escalas.
